# Red_belt

./: .gitignore  CMakeLists.txt  ReadMe.md  test_runner.h
Week_1/Lecture_example/: lecture.cpp
Week_1/task_0_max_element_if/: max_element_if.cpp  task_0.md
Week_1/task_1_log/: log.cpp  task.md
Week_1/task_2_comps/: sort_by.cpp  task.md
Week_1/task_3_update_field/: task.md  update_field.cpp
Week_1/task_4_bad_macros/: date.cpp  date.h  print_values.cpp  task.md
Week_1/task_5_uniq_id/: task.md  uniq_id.cpp
Week_1/task_6_table/: table.cpp  task.md
Week_1/task_7_deque/: deque.cpp  deque.h  task.md  test_runner.h
Week_1/task_8_paginator/: paginator.cpp  task.md
Week_2/task_1_sort_students/: sort_students.cpp  student.h  task.md
Week_2/task_2_learner/: learner.cpp  random_words.txt  task.md
Week_2/task_3_expresses/: profile.h  slow.cpp  task.md
Week_2/task_4_ebook/: ebook.cpp  slow.cpp  task.md
Week_2/task_5_booking/: booking.cpp  task.md
Week_2/utility/: utility.cpp
Week_3/task_1_objectPool/: object_pool.cpp  task.md
Week_3/task_2_SortSwapCope/: swap_sort_copy.cpp  task.md
Week_3/task_3_vector/: simple_vector.h  simple_vector_tests.cpp  task.md
Week_3/task_4_list/: linked_list.cpp  task.md
Week_4/stringSet/: stringSet.cpp
Week_4/task_1_sportsmen/: sportsmen.cpp  task.md
Week_4/task_2_stackVector/: stack_vector.cpp  stack_vector.h  task.md
Week_4/task_3_translator/: task.md  translator.cpp
Week_4/task_4_airportCounter/: airport_counter.cpp  task.md
Week_4/task_5_textEditor/: task.md  text_editor.cpp
Week_4/task_6_webServer/: http_request.h  server_stats.cpp  stats.cpp  stats.h  task.md
Week_4/utility/: utility.cpp
Week_5/Account/: account.cpp
Week_5/samples/: async.cpp
Week_5/task_10_synchronized/: synchronized.cpp  task.md
Week_5/task_11_ConcurrentMap/: concurrent_map.cpp  task.md
Week_5/task_1_josephus/: josephus_permutation.cpp  task.md
Week_5/task_2_groupStrings/: group_heavy_strings.cpp  task.md
Week_6/part_1/: main.cpp  (+6 more)
test_framework/: profile.h  test_runner.h
(+19 files in other folders)
